--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sofiiaruban.github.io/",
+  "homepage": "https://sofiiaruban.github.io/portfolio",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.15.0",
